<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zenflow.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_habits"
        android:name="com.example.zenflow.ui.habits.HabitsFragment"
        android:label="@string/title_habits"
        tools:layout="@layout/fragment_habits" />

    <fragment
        android:id="@+id/navigation_mood"
        android:name="com.example.zenflow.ui.moods.MoodsFragment"
        android:label="@string/title_mood"
        tools:layout="@layout/fragment_moods" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.zenflow.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>