<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".SigninActivity">

    <ImageView
        android:id="@+id/signin_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zenflow_logo" />

    <TextView
        android:id="@+id/signin_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_text1"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSurface"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_logo" />

    <TextView
        android:id="@+id/signin_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/signin_text2"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_text1" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="?attr/colorSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_text2"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/lbl_email_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/lbl_email"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/signin_email"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/lbl_pwd_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/lbl_pwd"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/signin_pwd"
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signin_btn_main"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginBottom="20dp"
                android:text="@string/signin_btn"
                android:textSize="20sp"
                android:textStyle="bold"
                style="@style/Widget.Material3.Button"
                app:cornerRadius="12dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signin_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signin_text3"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signup_btn_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/signup_btn"
                    android:textColor="@color/zen_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>